@@ -4,6 +4,15 @@
 </HEAD>
 <BODY TEXT="#000000" BGCOLOR="#FFFFFF" LINK="#0000EE" VLINK="#551A8B" ALINK="#FF0000">
 <p>
+2002-11-24  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> lib/Drawable.cpp: Added DrawablePushClipPath,
+        DrawablePopClipPath, and DrawableClipPath.  Implementation
+        contributed by Vladimir &lt;lvm@integrum.ru&gt;.
+
+</UL>
+<p>
 2002-11-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
