@@ -11,6 +11,7 @@ This file records noteworthy changes in Magick++.
 <UL>
   <LI> Added adaptiveThreshold() method.
   <LI> Added colorMapSize() method.
+  <LI> Added DrawablePushClipPath, DrawablePopClipPath, and DrawableClipPath.
 
 </UL>
 <p>
