@@ -1,3 +1,9 @@
+2002-11-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* lib/Drawable.cpp: Added DrawablePushClipPath,
+ 	DrawablePopClipPath, and DrawableClipPath.  Implementation
+ 	contributed by Vladimir <lvm@integrum.ru>.
+
 2002-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* lib/Image.cpp (colorMapSize): New method to set, or return
